# Bug-Bounty

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: default.yaml  payloads-aggressive.yaml  payloads-oob.yaml  payloads.yaml
docker/: Dockerfile  docker-compose.yml
docs/: BOUNTY_GUIDE.md  EXEMPLOS_AVANCADOS.md
nuclei-templates/: api-auth-bypass-probe.yaml  sensitive-info-disclosure.yaml
src/bounty_agent/: __init__.py  __main__.py  cli.py  config.py  demo.py  dryrun.py  legacy.py  logging_setup.py  orchestrator.py
src/bounty_agent/auth/: __init__.py  login.py
src/bounty_agent/continuous/: __init__.py  diff.py  notifier.py
src/bounty_agent/core/: __init__.py  models.py  schema.py  scope.py
src/bounty_agent/eval/: __init__.py  dataset.py  harness.py
src/bounty_agent/exploit/: __init__.py  chain_reasoner.py  poc_generator.py  validator.py
src/bounty_agent/fuzzing/: __init__.py  adaptive.py  analyzers.py  fuzzer.py  payloads.py  waf_bypass.py
src/bounty_agent/ingest/: __init__.py  openapi.py
src/bounty_agent/llm/: __init__.py  classifier.py
src/bounty_agent/notifications/: __init__.py  webhook.py
src/bounty_agent/oob/: __init__.py  client.py  correlator.py  server.py  tokens.py
src/bounty_agent/persistence/: __init__.py  db.py  models.py  repository.py  tool_cache.py
src/bounty_agent/recon/: __init__.py  app_fingerprint.py  endpoints.py  pipeline.py  waf.py
src/bounty_agent/reporting/: __init__.py  json_report.py  markdown.py  text.py
src/bounty_agent/reporting/templates/: scan_report.md.j2
src/bounty_agent/scanners/: __init__.py  cors.py  headers.py  jwt_attack.py  nuclei.py  open_redirect.py  sensitive.py  transport.py
src/bounty_agent/scoring/: __init__.py  impact.py
src/bounty_agent/tools/: __init__.py  arjun.py  base.py  dnsx.py  httpx_prober.py  katana.py  naabu.py  nmap.py  subfinder.py  subjack.py  trufflehog.py  waybackurls.py
src/bounty_agent/visual/: __init__.py  fingerprint.py
tests/fixtures/: nuclei_output.jsonl
tests/golden/: README.md  path_traversal_404.json  path_traversal_passwd.json  path_traversal_win_ini.json  sqli_clean_response.json  sqli_mysql_error.json  sqli_oracle_error.json  sqli_postgres_error.json  sqli_word_error_no_db.json  xss_json_reflection.json  xss_reflected_html.json
tests/integration/: test_orchestrator.py
tests/unit/: test_app_fingerprint.py  test_cli.py  test_config.py  test_core_models.py  test_cors.py  test_dryrun.py  test_endpoints.py  test_eval.py  test_exploit.py  test_fuzzer.py  test_fuzzing_analyzers.py  test_fuzzing_payloads.py  test_headers_scanner.py  test_jwt_attack.py  test_llm_classifier.py  test_logging_setup.py  test_login.py  test_notifications.py  test_nuclei_parser.py  test_nuclei_scanner.py  test_oob_client.py  test_oob_correlator.py  test_oob_server.py  test_oob_tokens.py  test_open_redirect.py  test_package.py  test_persistence.py  test_recon_pipeline.py  test_reporting.py  test_scope.py  test_scoring.py  test_sensitive.py  test_tool_arjun.py  test_tool_cache.py  test_tool_nmap.py  test_tool_subjack.py  test_tool_trufflehog.py  test_tools_base.py  test_tools_parsers.py  test_tools_registry.py  (+3 more)
